{
    "name": "InputSystem",
    "maps": [
        {
            "name": "Main",
            "id": "953d701e-776d-4395-bf87-7daa7d0dfb07",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "d0764f55-545a-4720-91ff-4b9cac43c3a4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OpenGameMenu",
                    "type": "Button",
                    "id": "6ec9d094-dc9b-4597-b4a6-d99f9dc32dd6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "4834a371-0d9c-466b-9a2e-d63b31ee1735",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "16317faf-5af0-43f3-a46c-aea4a82bad4d",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b404a566-97ee-44e6-9a9a-ad9a62059970",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenGameMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6cd5b93b-6d50-434d-a53c-be71953aca35",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}